adding stuff to login branch

--- a/login.html
+++ b/login.html
@@ -9,7 +9,6 @@
     <script src="app.js"></script>
 </head>
 <body>
-    <h1>Git Practice App</h1>
-    <p>woo</p>
+    <h1>login</h1>
 </body>
 </html>
